# newtestpackage

./: LICENSE  pyproject.toml
src/newtestpackage/: cli.py  utils.py
